--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,29 @@
   "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "ext.html",
-    "default_icon": "hello_extensions.png"
-  }
+    "default_icon": {
+      "16": "assets/icon-16.png",
+      "32": "assets/icon-32.png",
+      "48": "assets/icon-48.png",
+      "128": "assets/icon-128.png"
+    }
+  },
+  "icons": {
+    "16": "assets/icon-16.png",
+    "32": "assets/icon-32.png",
+    "48": "assets/icon-48.png",
+    "128": "assets/icon-128.png"
+  },
+  "background": {
+    "service_worker": "scripts/background.js"
+  },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+B",
+        "mac": "Command+B"
+      }
+    }
+  },
+  "permissions": ["activeTab", "scripting"]
 }
